--- a/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
+++ b/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -13,13 +14,10 @@
       <Label layoutX="229.0" layoutY="30.0" text="Superhero Search" />
       <Label layoutX="36.0" layoutY="85.0" text="Search:" />
       <TextField fx:id="searchTextField" layoutX="114.0" layoutY="79.0" prefHeight="39.0" prefWidth="351.0" promptText="Write superhero name" />
-      <TableView fx:id="tableView" layoutX="28.0" layoutY="132.0" prefHeight="200.0" prefWidth="543.0">
-        <columns>
-          <TableColumn fx:id="nameCol" prefWidth="370.0" resizable="false" text="Hero Name" />
-        </columns>
-      </TableView>
       <Label fx:id="heroesReturnedLabel" layoutX="28.0" layoutY="341.0" text="Superheroes found: 0" />
       <Label fx:id="instructionsLabel" layoutX="323.0" layoutY="341.0" text="Double click hero for more info" />
       <Button fx:id="searchButton" layoutX="485.0" layoutY="79.0" mnemonicParsing="false" onAction="#searchButton" text="Search" />
+      <ListView fx:id="initialHeroDataListView" layoutX="36.0" layoutY="124.0" prefHeight="200.0" prefWidth="280.0" />
+      <ImageView fx:id="photoImageView" fitHeight="200.0" fitWidth="200.0" layoutX="355.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
