--- a/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
+++ b/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -9,15 +10,39 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011assignment2.Controllers.SearchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011assignment2.Controllers.SearchController">
    <children>
-      <Label layoutX="229.0" layoutY="30.0" text="Superhero Search" />
-      <Label layoutX="36.0" layoutY="85.0" text="Search:" />
-      <TextField fx:id="searchTextField" layoutX="114.0" layoutY="79.0" prefHeight="39.0" prefWidth="351.0" promptText="Write superhero name" />
-      <Label fx:id="heroesReturnedLabel" layoutX="28.0" layoutY="341.0" text="Superheroes found: 0" />
-      <Label fx:id="instructionsLabel" layoutX="323.0" layoutY="341.0" text="Double click hero for more info" />
-      <Button fx:id="searchButton" layoutX="485.0" layoutY="79.0" mnemonicParsing="false" onAction="#searchButton" text="Search" />
-      <ListView fx:id="initialHeroDataListView" layoutX="36.0" layoutY="124.0" prefHeight="200.0" prefWidth="280.0" />
-      <ImageView fx:id="photoImageView" fitHeight="200.0" fitWidth="200.0" layoutX="355.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
+      <BorderPane prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <Label text="Superhero Search" BorderPane.alignment="CENTER" />
+         </top>
+         <center>
+            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox layoutX="1.0" layoutY="39.0" prefHeight="39.0" prefWidth="764.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="45.0" prefHeight="43.0" prefWidth="123.0" text="Search:" />
+                        <TextField fx:id="searchTextField" layoutX="162.0" layoutY="39.0" prefHeight="39.0" prefWidth="447.0" promptText="Write superhero name" />
+                        <Button fx:id="searchButton" layoutX="581.0" layoutY="39.0" mnemonicParsing="false" onAction="#searchButton" prefHeight="39.0" prefWidth="184.0" text="Search" />
+                     </children>
+                  </HBox>
+                  <ListView fx:id="initialHeroDataListView" layoutX="42.0" layoutY="114.0" prefHeight="287.0" prefWidth="333.0" />
+                  <ImageView fx:id="photoImageView" fitHeight="304.0" fitWidth="288.0" layoutX="429.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="errMsgLabel" layoutX="313.0" layoutY="450.0" text="No Heroes Found" />
+               </children>
+               <BorderPane.margin>
+                  <Insets left="20.0" right="20.0" />
+               </BorderPane.margin>
+            </Pane>
+         </center>
+         <bottom>
+            <Pane prefHeight="61.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="heroesReturnedLabel" layoutX="27.0" layoutY="1.0" prefHeight="61.0" prefWidth="194.0" text="Superheroes found: 0" />
+                  <Button fx:id="moreDetailsBtn" layoutX="624.0" layoutY="12.0" mnemonicParsing="false" onAction="#getHeroDetails" text="More Details &gt;&gt;" />
+               </children>
+            </Pane>
+         </bottom>
+      </BorderPane>
    </children>
 </AnchorPane>
