--- a/src/main/resources/com/example/f21comp1011assignment2/details-view.fxml
+++ b/src/main/resources/com/example/f21comp1011assignment2/details-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -18,7 +20,7 @@
                <children>
                   <HBox layoutX="56.0" layoutY="71.0" prefHeight="314.0" prefWidth="756.0">
                      <children>
-                        <GridPane layoutX="56.0" layoutY="97.0" prefHeight="314.0" prefWidth="358.0">
+                        <GridPane layoutX="56.0" layoutY="97.0" prefHeight="235.0" prefWidth="358.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,24 +31,66 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Label text="Full Name:" />
-                              <Label fx:id="fullNameLabel" GridPane.columnIndex="1" />
-                              <Label text="Alignment:" GridPane.rowIndex="1" />
-                              <Label fx:id="alignmentLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label text="Publisher:" GridPane.rowIndex="2" />
-                              <Label fx:id="publisherLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="180.0" text="Full Name:">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font></Label>
+                              <Label fx:id="fullNameLabel" GridPane.columnIndex="1">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin></Label>
+                              <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="180.0" text="Alignment:" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font></Label>
+                              <Label fx:id="alignmentLabel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin></Label>
+                              <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="180.0" text="Publisher:" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font></Label>
+                              <Label fx:id="publisherLabel" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="10.0" />
+                                 </GridPane.margin></Label>
                            </children>
+                           <HBox.margin>
+                              <Insets right="20.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="20.0" top="20.0" />
+                           </padding>
                         </GridPane>
-                        <ImageView fx:id="imageView" fitHeight="280.0" fitWidth="200.0" layoutX="385.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="photoImageView" fitHeight="280.0" fitWidth="200.0" layoutX="385.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+                           <HBox.margin>
+                              <Insets top="15.0" />
+                           </HBox.margin></ImageView>
                      </children>
                   </HBox>
-                  <Label layoutX="38.0" layoutY="207.0" text="Powerstats" />
-                  <GridPane layoutX="38.0" layoutY="241.0" prefHeight="90.0" prefWidth="347.0">
+                  <Label alignment="CENTER" layoutX="38.0" layoutY="207.0" prefHeight="35.0" prefWidth="684.0" text="Powerstats" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font></Label>
+                  <GridPane alignment="CENTER" gridLinesVisible="true" layoutX="38.0" layoutY="241.0" prefHeight="90.0" prefWidth="623.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="58.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="89.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="48.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="114.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="133.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -54,25 +98,139 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Strength:" />
-                        <Label fx:id="strengthLabel" text="Label" GridPane.columnIndex="1" />
-                        <Label text="Durability:" GridPane.rowIndex="1" />
-                        <Label fx:id="durabilityLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label text="Combat:" GridPane.rowIndex="2" />
-                        <Label fx:id="combatLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label prefHeight="27.0" prefWidth="74.0" text="Power:" GridPane.columnIndex="2" />
-                        <Label text="Speed:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Label text="Intelligence:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                        <Label fx:id="powerLabel" text="Label" GridPane.columnIndex="3" />
-                        <Label fx:id="speedLabel" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Label fx:id="intelligenceLabel" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <Label prefHeight="35.0" prefWidth="232.0" text="Strength:">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="strengthLabel" text="Label" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label prefHeight="35.0" prefWidth="239.0" text="Durability:" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="durabilityLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label prefHeight="35.0" prefWidth="228.0" text="Combat:" GridPane.rowIndex="2">
+                           <font>
+                               <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="combatLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label prefHeight="35.0" prefWidth="131.0" text="Power:" GridPane.columnIndex="2">
+                           <font>
+                               <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label text="Speed:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label text="Intelligence:" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <font>
+                               <Font name="System Bold" size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="powerLabel" text="Label" GridPane.columnIndex="3">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="speedLabel" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="intelligenceLabel" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
                      </children>
+                     <padding>
+                        <Insets left="20.0" right="20.0" />
+                     </padding>
                   </GridPane>
                </children>
             </VBox>
          </center>
          <bottom>
-            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backToSearch" text="Back To Search" BorderPane.alignment="CENTER" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backToSearch" text="Back To Search" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets bottom="30.0" />
+               </BorderPane.margin></Button>
          </bottom>
          <left>
             <Pane prefHeight="534.0" prefWidth="58.0" BorderPane.alignment="CENTER" />
