--- a/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
+++ b/src/main/resources/com/example/f21comp1011assignment2/search-view.fxml
@@ -1,34 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011assignment2.Controllers.SearchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.f21comp1011assignment2.Controllers.SearchController">
    <children>
       <BorderPane prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <Label text="Superhero Search" BorderPane.alignment="CENTER" />
+            <Label fx:id="searchHeadingLabel" text="Superhero Search" BorderPane.alignment="CENTER" />
          </top>
          <center>
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <HBox layoutX="1.0" layoutY="39.0" prefHeight="39.0" prefWidth="764.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="45.0" prefHeight="43.0" prefWidth="123.0" text="Search:" />
-                        <TextField fx:id="searchTextField" layoutX="162.0" layoutY="39.0" prefHeight="39.0" prefWidth="447.0" promptText="Write superhero name" />
-                        <Button fx:id="searchButton" layoutX="581.0" layoutY="39.0" mnemonicParsing="false" onAction="#searchButton" prefHeight="39.0" prefWidth="184.0" text="Search" />
+                        <Label fx:id="searchLabel" layoutX="14.0" layoutY="45.0" prefHeight="43.0" prefWidth="123.0" text="Search:" />
+                        <TextField fx:id="searchTextField" layoutX="162.0" layoutY="39.0" prefHeight="39.0" prefWidth="447.0" promptText="Write superhero name">
+                           <font>
+                              <Font size="18.0" />
+                           </font></TextField>
+                        <Button fx:id="searchButton" layoutX="581.0" layoutY="39.0" mnemonicParsing="false" onAction="#searchButton" prefHeight="39.0" prefWidth="160.0" text="Search">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin></Button>
                      </children>
                   </HBox>
-                  <ListView fx:id="initialHeroDataListView" layoutX="42.0" layoutY="114.0" prefHeight="287.0" prefWidth="333.0" />
-                  <ImageView fx:id="photoImageView" fitHeight="304.0" fitWidth="288.0" layoutX="429.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="errMsgLabel" layoutX="313.0" layoutY="450.0" text="No Heroes Found" />
+                  <StackPane layoutX="42.0" layoutY="104.0">
+                     <children>
+                        <VBox alignment="CENTER">
+                           <children>
+                              <ImageView fx:id="errImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../error.png" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="errMsgLabel" prefHeight="82.0" prefWidth="468.0" text="No Heroes Found" />
+                           </children>
+                        </VBox>
+                        <HBox layoutX="42.0" layoutY="104.0">
+                           <children>
+                              <ListView fx:id="initialHeroDataListView" layoutX="42.0" layoutY="114.0" prefHeight="287.0" prefWidth="333.0">
+                                 <HBox.margin>
+                                    <Insets right="30.0" />
+                                 </HBox.margin></ListView>
+                              <ImageView fx:id="photoImageView" fitHeight="304.0" fitWidth="288.0" layoutX="429.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </StackPane>
                </children>
                <BorderPane.margin>
                   <Insets left="20.0" right="20.0" />
@@ -38,8 +69,8 @@
          <bottom>
             <Pane prefHeight="61.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="heroesReturnedLabel" layoutX="27.0" layoutY="1.0" prefHeight="61.0" prefWidth="194.0" text="Superheroes found: 0" />
-                  <Button fx:id="moreDetailsBtn" layoutX="624.0" layoutY="12.0" mnemonicParsing="false" onAction="#getHeroDetails" text="More Details &gt;&gt;" />
+                  <Label fx:id="heroesReturnedLabel" layoutX="27.0" layoutY="1.0" prefHeight="61.0" prefWidth="323.0" text="Superheroes found: 0" />
+                  <Button fx:id="moreDetailsBtn" layoutX="619.0" layoutY="7.0" mnemonicParsing="false" onAction="#getHeroDetails" prefHeight="47.0" prefWidth="155.0" text="More Details &gt;&gt;" />
                </children>
             </Pane>
          </bottom>
